stopgap changes to globalcss mediaqueries to work on new header for mobile. must be revisited.

--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -114,42 +114,24 @@
   background-color: transparent;
 }
 
-.bounce {
-  position: absolute;
-  top: 200px;
-  right: 150px;
-  -moz-animation: bounce 2.5s infinite;
-  -webkit-animation: bounce 2.5s infinite;
-  animation: bounce 2.5s infinite;
-}
-
-@keyframes bounce {
-  0%,
-  20%,
-  50%,
-  80%,
-  100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-45px);
-  }
-  60% {
-    transform: translateY(-22px);
-  }
-}
-
 @media screen and (max-width: 415px) {
   .logoSpacing {
     width: 140px;
   }
+
+  .header {
+    position: static;
+  }
+
+  .scrolledHeader {
+    position: fixed;
+    margin: auto;
+  }
+
   .heroBanner {
     height: 40vh;
   }
-  .bounce {
-    top: 175px;
-    right: 10px;
-  }
+
   .transparent {
     display: none;
   }
